--- a/css/product-style.css
+++ b/css/product-style.css
@@ -1,5 +1,10 @@
 img {
     width: 100%;
+    border-radius: 10px;
+}
+
+.sidebar, .card-box {
+    border: #FFB33A solid 2px;
 }
 
 #prod-main {
@@ -10,40 +15,36 @@ img {
 #card-container {
     margin-top: 10px;
     display: grid;
+    width: auto;
     grid-template-columns: 
-        repeat(auto-fit, minmax(min(150px, 100%), 1fr));
+        repeat(auto-fit, minmax(min(250px, 100%), 1fr));
     grid-template-rows: max-content;
-    gap: 1rem;
+    gap: 3rem;
 } 
 
 .full-container {
     margin: 0;
     display: flex;
-    justify-content:space-between;
+    justify-content: flex-start;
     gap: 20px;
 }
 
 .card-box {
-    background-color: aqua;
-    
+    background-color: #E3E3E3;
+    border-radius: 10px;
     max-height: 350px;
-}
 
-.container-barra {
-  display: flex;
-  gap: 20px; 
-  margin: 10px auto;
-  max-width: 2000px;
 }
 
 .sidebar {
-  width: 150px;
-  background-color: rgba(217, 217, 217, 1);
-  padding: 15px;
-  border-radius: 10px;
+    width: 150px;
+    max-height: fit-content;
+    background-color: #E3E3E3;
+    padding: 15px;
+    border-radius: 10px;
 }
 
-p {
+.selector-marca-modelo {
     text-indent: 15px;
     color: rgb(95, 93, 93)
 }
@@ -51,4 +52,20 @@ p {
 .precio {
     width: 100px;
     color: rgb(95, 93, 93);
+}
+
+hr {
+    color: #FFB33A;
+}
+
+.costo {
+    font-weight: 400;
+}
+
+.cant-vendidos, .descripcion {
+    font-weight: 300;
+}
+
+.descripcion {
+    
 }
