--- a/css/product-style.css
+++ b/css/product-style.css
@@ -1,7 +1,14 @@
-img {
+.product-image {
     width: 100%;
-    border-radius: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
+
+h4, .descripcion {
+    margin-left: 2%;
+}
+
+
 
 .sidebar, .card-box {
     border: #FFB33A solid 2px;
@@ -13,30 +20,32 @@ img {
 }
 
 #card-container {
-    margin-top: 10px;
     display: grid;
     width: auto;
     grid-template-columns: 
-        repeat(auto-fit, minmax(min(250px, 100%), 1fr));
+        repeat(auto-fit, minmax(min(300px, 100%), 1fr));
     grid-template-rows: max-content;
     gap: 3rem;
+    
 } 
 
 .full-container {
-    margin: 0;
+    margin-top: 1em;
     display: flex;
     justify-content: flex-start;
-    gap: 20px;
+    gap: 1em;
+    margin-right: 3em;
+    margin-bottom: 1em;
 }
 
 .card-box {
     background-color: #E3E3E3;
     border-radius: 10px;
-    max-height: 350px;
-
 }
 
 .sidebar {
+    position: sticky;
+    top: 80px;
     width: 150px;
     max-height: fit-content;
     background-color: #E3E3E3;
@@ -46,6 +55,7 @@ img {
 
 .selector-marca-modelo {
     text-indent: 15px;
+    margin: 0;
     color: rgb(95, 93, 93)
 }
 
@@ -64,8 +74,66 @@ hr {
 
 .cant-vendidos, .descripcion {
     font-weight: 300;
+
 }
 
-.descripcion {
-    
+.vendidos-container{
+    display: flex;
+    justify-content: space-around;
+}
+
+.corazon{
+    width: 30px;
+    height: 30px;
+    transition: all;
+    filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.5));
+
+}
+
+.corazon:hover {
+    transition-duration: 0.4s;
+    transform: scale(1.2);
+}
+
+.corazon:active {
+    transition-duration: 0.1s;
+    transform: scale(1.6);
+}
+
+footer {
+  bottom: 0;
+  width: 100%;
+  background: #D9D9D9;
+  text-align: left;
+  padding: 2em;
+  font-size: 14px;
+}
+
+.filtros-orden {
+    display: flex;
+    justify-content: flex-end;
+    gap: 0.5em;
+}
+
+select {
+    border: none;
+    height: fit-content;
+}
+
+h2, #resultados {
+    text-align: center;
+    position: sticky;
+}
+
+h2 {
+    top: 0;
+}
+
+#resultados {
+    top: 40px;
+}
+@media (max-width: 480px) {
+    .full-container {
+        margin-right: 0.5em;
+    }
 }
