--- a/css/product-style.css
+++ b/css/product-style.css
@@ -77,7 +77,7 @@ hr {
 
 .vendidos-container{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .corazon{
@@ -85,7 +85,11 @@ hr {
     height: 30px;
     transition: all;
     filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.5));
+    margin-right: 4%;
+}
 
+.cant-vendidos{
+    margin-left: 4%;
 }
 
 .corazon:hover {
