--- a/css/styles.css
+++ b/css/styles.css
@@ -188,3 +188,10 @@ a.custom-card:hover {
 .checked {
   color: orange;
 }
+
+#usuario-nav {
+  color: rgba(255, 255, 255, .55);
+  margin: 0;
+  display: flex;
+  align-items: center;
+}
