--- a/css/styles.css
+++ b/css/styles.css
@@ -192,6 +192,12 @@ a.custom-card:hover {
 #usuario-nav {
   color: rgba(255, 255, 255, .55);
   margin: 0;
-  display: flex;
-  align-items: center;
+  position: fixed;
+  left: 85%;
+  top: 9px;
+  font-size: 18px;
+}
+
+#usuario-nav:hover {
+  color: rgba(255, 255, 255, 0.75);
 }
