Arreglado el problema de overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -192,8 +192,8 @@ a.custom-card:hover {
 #usuario-nav {
   color: rgba(255, 255, 255, .55);
   margin: 0;
-  position: fixed;
-  left: 85%;
+  position: absolute;
+  right: 5%;
   top: 9px;
   font-size: 18px;
 }
