--- a/css/product-style.css
+++ b/css/product-style.css
@@ -1,3 +1,10 @@
+body{
+    min-height: 100vh;
+    display: flex;
+    flex-direction:column;
+    justify-content: space-between;
+}
+
 .product-image {
     width: 100%;
     border-top-left-radius: 10px;
