--- a/css/filtro-precio.css
+++ b/css/filtro-precio.css
@@ -45,7 +45,7 @@
 
 #selector-de-precio button {
   padding: 5px;
-  border: 0.5px;
+  border: 0.5px solid #ccc;
   border-radius: 5px;
   align-items: center;
 }
