--- a/css/filtro-precio.css
+++ b/css/filtro-precio.css
@@ -7,8 +7,8 @@
 
 .titulo-resultados {
   display: flex;
-  align-items: center;
-  gap: 10px;
+  flex-direction: column;
+  gap: 2px;
   font-size: 16px;
   color: #333;
 }
@@ -80,5 +80,9 @@
   .barra-filtro {
     margin-left: 1px;          
     margin-right: 1px;
+  }
+
+  .titulo-resultados {
+    flex-direction: row;
   }
 }
