--- a/css/product-style.css
+++ b/css/product-style.css
@@ -1,7 +1,7 @@
-body{
+body {
     min-height: 100vh;
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     justify-content: space-between;
 }
 
@@ -11,11 +11,13 @@ body{
     border-top-right-radius: 10px;
 }
 
-h4, .descripcion {
+h4,
+.descripcion {
     margin-left: 2%;
 }
 
-.sidebar, .card-box {
+.sidebar,
+.card-box {
     border: #FFB33A solid 2px;
 }
 
@@ -27,11 +29,11 @@ h4, .descripcion {
 #card-container {
     width: calc(100% - 150px);
     display: grid;
-    grid-template-columns: 
+    grid-template-columns:
         repeat(auto-fit, minmax(min(350px, 100%), 1fr));
     grid-template-rows: max-content;
     gap: 3rem;
-} 
+}
 
 .full-container {
     margin-top: 1em;
@@ -68,7 +70,7 @@ h4, .descripcion {
     flex-direction: column;
 }
 
-#separador{
+#separador {
     margin: 0;
     height: fit-content;
     padding: 0;
@@ -91,25 +93,26 @@ hr {
     font-weight: 400;
 }
 
-.cant-vendidos, .descripcion {
+.cant-vendidos,
+.descripcion {
     font-weight: 300;
 
 }
 
-.vendidos-container{
+.vendidos-container {
     display: flex;
     justify-content: space-between;
 }
 
-.corazon{
+.corazon {
     width: 30px;
     height: 30px;
     transition: all;
-    filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.5));
+    filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
     margin-right: 4%;
 }
 
-.cant-vendidos{
+.cant-vendidos {
     margin-left: 4%;
 }
 
@@ -124,12 +127,12 @@ hr {
 }
 
 footer {
-  bottom: 0;
-  width: 100%;
-  background: #D9D9D9;
-  text-align: left;
-  padding: 2em;
-  font-size: 14px;
+    bottom: 0;
+    width: 100%;
+    background: #D9D9D9;
+    text-align: left;
+    padding: 2em;
+    font-size: 14px;
 }
 
 select {
@@ -137,42 +140,42 @@ select {
     height: fit-content;
 }
 
-h2, #resultados {
+.titulo-resultados {
     text-align: center;
     position: sticky;
-}
-
-h2 {
     top: 0;
 }
 
-#resultados {
-    top: 40px;
+#entradas-precio {
+    display: flex;
+    flex-direction: column;
 }
 
 /*El media query que maneja el responsive para celu*/
 @media (max-width: 480px) {
-    .full-container{
+    .full-container {
         display: block;
         width: 100%;
     }
 
-    #card-container, .sidebar {
+    #card-container,
+    .sidebar {
         width: 95%;
         margin: auto;
     }
 
-    .sidebar{
+    .sidebar {
         margin-bottom: 3em;
         display: flex;
         justify-content: space-between;
     }
-   
+
     #card-container {
         width: 80%;
     }
 
-    h2, #resultados{
+    h2,
+    #resultados {
         position: static;
         text-align: start;
         margin: 0;
@@ -183,5 +186,13 @@ h2 {
         text-indent: 1em;
         margin-bottom: 1em;
 
+    }
+
+    #entradas-precio {
+        flex-direction: row;
+    }
+
+    .sidebar * {
+        margin: auto;
     }
 }
