--- a/css/product-info.css
+++ b/css/product-info.css
@@ -123,7 +123,7 @@ footer p {
 }
 
 #right-div h3 {
-  margin-bottom: ;
+  margin-bottom:auto ;
 }
 
 #comprar,
@@ -223,6 +223,23 @@ footer p {
   margin: 2em 0 0 0;
 }
 
+#calificaciones {
+  grid-column: 1 / -1;
+  margin: 3em auto;
+  padding: 1.5em;
+  max-width: 900px;
+}
+
+#calificaciones h3 {
+  margin-bottom: 1em;
+  font-size: 24px;
+  font-weight: bold;
+  border-bottom: 2px solid #ddd;
+  padding-bottom: 0.5em;
+  color: #333;
+  text-align: center;
+}
+
 @media (min-width : 375px) and (max-width: 768px) {
 
 
@@ -267,6 +284,51 @@ footer p {
   .galeria {
     justify-content: center;
   }
+
+    #calificaciones {
+    margin: 2em 1em;
+    padding: 1em;
+  }
+
+  #calificaciones h3 {
+    font-size: 20px;
+  }
+
+  .comentario {
+    padding: 1em;
+  }
+
+  .comentario .texto {
+    font-size: 14px;
+  }
+}
+
+.comentario {
+  background: #fff;
+  padding: 1em 1.5em;
+  border-radius: 10px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
+
+.comentario strong {
+    color: #21759c;
+}
+
+.comentario .fecha {
+  font-size: 12px;
+  color: #888;
+}
+
+.comentario .texto {
+  margin-top: 0.5em;
+  font-size: 15px;
+  line-height: 1.4;
+}
+
+.comentario .estrellas {
+  margin-top: 0.5em;
+  font-size: 18px;
+  color: #ffb33a;
 }
 
 @media (max-width: 375px) {
@@ -303,5 +365,21 @@ footer p {
 
   .galeria {
     justify-content: center;
+  }
+    #calificaciones {
+    margin: 1.5em 0.5em;
+    padding: 1em;
+  }
+
+  #calificaciones h3 {
+    font-size: 18px;
+  }
+
+  .comentario {
+    padding: 0.8em;
+  }
+
+  .comentario .texto {
+    font-size: 13px;
   }
 }
