--- a/css/product-info.css
+++ b/css/product-info.css
@@ -223,6 +223,38 @@ footer p {
   margin: 2em 0 0 0;
 }
 
+#dejar-comentario {
+  margin: 3em 2em 2em 2em;
+  padding: 1em;
+  background-color: #e7e6e6;
+  border: 1px solid #ffb33a;
+  border-radius: 5px;
+  height: auto;
+}
+
+#titulo-com {
+  text-align: center;
+  margin-bottom: 0.5em;
+}
+
+#escribir-comentario input {
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding: 0.5em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+
+#publicar-comentario {
+  background-color: #ffb33a;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 0.2em 0.2em;
+}
+
 .related {
   margin: 2em;
 }
@@ -335,4 +367,5 @@ footer p {
   .galeria {
     justify-content: center;
   }
+
 }
