--- a/css/product-info.css
+++ b/css/product-info.css
@@ -48,6 +48,8 @@ footer p {
   display: flex;
   flex-direction: column;
   height: auto;
+  box-shadow: inset -5px -5px 10px grey;
+  border-bottom-right-radius: 8px;
 }
 
 .nombre-categoria {
@@ -117,7 +119,6 @@ footer p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: 4px 4px 20px black;
   background-color: #ffffff;
   height: auto;
 }
@@ -413,4 +414,5 @@ footer p {
   .comentario .texto {
     font-size: 13px;
   }
+
 }
