--- a/css/product-info.css
+++ b/css/product-info.css
@@ -304,6 +304,10 @@ footer p {
   padding: 0.2em 0.2em;
 }
 
+#estrellas svg {
+  cursor: pointer; 
+}
+
 
 @media (min-width : 375px) and (max-width: 768px) {
 
@@ -450,4 +454,5 @@ footer p {
   }
 
 }
+
 
