--- a/css/product-info.css
+++ b/css/product-info.css
@@ -259,7 +259,7 @@ footer p {
   grid-column: 1 / -1;
   margin: 3em auto;
   padding: 1.5em;
-  max-width: 900px;
+  width: 95%;
 }
 
 #calificaciones h3 {
@@ -271,6 +271,43 @@ footer p {
   color: #333;
   text-align: center;
 }
+
+#dejar-comentario {
+  margin: 3em 2em 2em 2em;
+  padding: 1em;
+  background-color: #e7e6e6;
+  border: 1px solid #ffb33a;
+  border-radius: 5px; 
+  height: auto;
+}
+
+#titulo-com {
+  text-align: center;
+  margin-bottom: 0.5em;
+}
+
+#escribir-comentario input {
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding: 0.5em;
+  margin-top: 0.5em; 
+  margin-bottom: 0.5em; 
+}
+
+#publicar-comentario {
+  background-color: #ffb33a;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 0.2em 0.2em;
+}
+
+#estrellas svg {
+  cursor: pointer; 
+}
+
 
 @media (min-width : 375px) and (max-width: 768px) {
 
@@ -312,8 +349,6 @@ footer p {
     grid-template-columns: 1fr;
   }
 
-  
-
   .carrusel {
     flex-direction: row;
     margin-right: 10px;
@@ -345,7 +380,8 @@ footer p {
   background: #fff;
   padding: 1em 1.5em;
   border-radius: 10px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 10px rgba(0,0,0,0.25);
+  margin-bottom: 1em;
 }
 
 .comentario strong {
@@ -409,10 +445,6 @@ footer p {
     padding: 1em;
   }
 
-  #calificaciones h3 {
-    font-size: 18px;
-  }
-
   .comentario {
     padding: 0.8em;
   }
@@ -422,4 +454,5 @@ footer p {
   }
 
 }
+
 
