Updated login style

--- a/css/login-style.css
+++ b/css/login-style.css
@@ -30,13 +30,12 @@ main {
   justify-content: space-around;
   align-items: center;
   gap: 50px;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
   padding: 2em;
 }
 
 .image {
-  margin-top: 2em;
-  max-width: 100%; 
+  max-width: 100%;
   height: auto;
 }
 
@@ -54,7 +53,9 @@ main {
   box-shadow: 1px 1px 4px 4px rgba(0, 0, 0, 0.3);
 }
 
-#name {
+#name,
+#mail,
+#lastname {
   margin-bottom: 2em;
 }
 
@@ -71,8 +72,9 @@ a {
   padding: 1em;
   width: 100%;
   max-width: 20em;
-  border-style: solid;
-  border-radius: 10px;
+  border: 1px solid;
+  border-bottom-left-radius: 10px;
+  border-top-right-radius: 10px;
   border-color: #ffb33a;
 }
 
@@ -95,7 +97,7 @@ button:hover {
 }
 
 .mobile-title {
-    display: none;
+  display: none;
 }
 
 
@@ -106,18 +108,22 @@ button:hover {
   }
 
   .mobile-title {
-   display: block;
+    display: block;
   }
 
   .mobile-logo {
 
-    max-width: 100%; 
-    height: auto; 
-    margin-bottom: 2em;     
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 2em;
   }
 
   .login-container {
-    height: 70vh;
+    height: 74vh;
+  }
+
+  .input-box::placeholder {
+    font-size: large;
   }
 
   .input-box {
@@ -132,4 +138,21 @@ button:hover {
   footer p {
     margin-left: 2em;
   }
+}
+
+@media (max-width: 375px) {
+
+  button {
+    padding: 1em;
+  }
+
+  .input-box::placeholder {
+    font-size: small;
+  }
+
+  .input-box {
+    padding: 0.8em;
+    width: 100%;
+  }
+
 }
