--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+:root {
+  --main-color: #ffb33a;
+  --main-bg-color: #ffffff;
+  --secondary-bg-color: #F4F3F3;
+  --text-color: #212529;
+}
+
 .jumbotron,
 .card-body,
 .container,
