--- a/css/product-info.css
+++ b/css/product-info.css
@@ -3,14 +3,6 @@
   padding: 0;
 }
 
-
-footer {
-  margin-top: auto;
-  width: 100%;
-  background: #D9D9D9;
-  padding: 1em;
-}
-
 body {
   min-height: 100vh;
   display: flex;
@@ -28,7 +20,7 @@ main {
 footer {
   margin: 0;
   width: 100%;
-  background: #D9D9D9;
+  background: #212529;
   padding: 1em;
 }
 
@@ -50,7 +42,7 @@ footer p {
   display: flex;
   flex-direction: column;
   height: auto;
-  box-shadow: inset -5px -5px 10px grey;
+  box-shadow: inset -5px -5px 10px rgba(0, 0, 0, 0.5);
   border-bottom-right-radius: 8px;
   background-color: var(--secondary-bg-color);
 }
@@ -100,7 +92,7 @@ footer p {
 
 .img-thumbnail {
   padding: 0;
-  box-shadow: 4px 4px 8px;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
 }
 
 .galeria img {
@@ -127,7 +119,7 @@ footer p {
 }
 
 #right-div h3 {
-  margin-bottom:auto ;
+  margin-bottom: auto;
 }
 
 #comprar,
@@ -200,13 +192,13 @@ footer p {
 
 .casilla-info-compra hr {
   width: 95%;
-  border-top: black ;
+  border-top: black;
 }
 
 #product-price {
   font-size: 32px;
   font-weight: bold;
-  color: black;
+  color: var(--text-color);
   text-align: center;
   margin: 20px 0;
 }
@@ -269,18 +261,17 @@ footer p {
   margin-bottom: 1em;
   font-size: 24px;
   font-weight: bold;
-  border-bottom: 2px solid #ddd;
   padding-bottom: 0.5em;
-  color: #333;
+  color: var(--text-color);
   text-align: center;
 }
 
 #dejar-comentario {
   margin: 3em 2em 2em 2em;
   padding: 1em;
-  background-color: #e7e6e6;
+  background-color: var(--main-bg-color);
   border: 1px solid var(--main-color);
-  border-radius: 5px; 
+  border-radius: 5px;
   height: auto;
 }
 
@@ -293,10 +284,12 @@ footer p {
   width: 100%;
   height: auto;
   border-radius: 5px;
-  border: 1px solid #ccc;
   padding: 0.5em;
-  margin-top: 0.5em; 
-  margin-bottom: 0.5em; 
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  background-color: var(--secondary-bg-color);
+  border: none;
+  color: var(--text-color);
 }
 
 #publicar-comentario {
@@ -308,7 +301,8 @@ footer p {
 }
 
 #estrellas svg {
-  cursor: pointer; 
+  cursor: pointer;
+  color: var(--main-color);
 }
 
 
@@ -320,7 +314,7 @@ footer p {
     height: auto;
     box-shadow: none;
   }
-  
+
   #product-category {
     margin-left: 1em;
   }
@@ -344,6 +338,7 @@ footer p {
   #product-prize {
     font-size: 40px;
   }
+
   footer p {
     text-align: left;
   }
@@ -361,7 +356,7 @@ footer p {
     justify-content: center;
   }
 
-    #calificaciones {
+  #calificaciones {
     margin: 2em 1em;
     padding: 1em;
   }
@@ -383,12 +378,12 @@ footer p {
   background: var(--main-bg-color);
   padding: 1em 1.5em;
   border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.25);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
   margin-bottom: 1em;
 }
 
 .comentario strong {
-    color: #21759c;
+  color: #21759c;
 }
 
 .comentario .fecha {
@@ -418,7 +413,7 @@ footer p {
     font-size: x-large;
   }
 
-  #product-description{
+  #product-description {
     font-size: large;
   }
 
@@ -443,7 +438,8 @@ footer p {
   .galeria {
     justify-content: center;
   }
-    #calificaciones {
+
+  #calificaciones {
     margin: 1.5em 0.5em;
     padding: 1em;
   }
@@ -457,5 +453,3 @@ footer p {
   }
 
 }
-
-
