--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
   --main-bg-color: #ffffff;
   --secondary-bg-color: #F4F3F3;
   --text-color: #212529;
+  --card-border: #B5B5B5;
 }
 
 .jumbotron,
