--- a/css/my-profile.css
+++ b/css/my-profile.css
@@ -4,16 +4,6 @@
     color: var(--text-color);
 }
 
-:root {
-    --main-color: #ffb33a;
-    --main-bg-color: #ffffff;
-    --secondary-bg-color: #F4F3F3;
-    --text-color: #212529;
-    --card-border: #B5B5B5;
-    --box-color: #bbbbbb;
-    --mattress: #EBEBEB;
-}
-
 body {
     display: flex;
     flex-direction: column;
@@ -21,6 +11,7 @@ body {
     min-height: 100vh;
     width: 100%;
     font-family: sans-serif;
+    background-color: var(--main-bg-color);
 }
 
 
@@ -49,9 +40,10 @@ body {
 
 footer {
     width: 100%;
-    background: #D9D9D9;
+    background: #212529;
     padding: 1em;
     text-align: center;
+    color: #C8CDD0;
 }
 
 
@@ -204,7 +196,7 @@ label {
         margin: 0;
     }
 
-    label  {
+    label {
         top: 1em;
         left: 1em;
     }
