--- a/css/login-style.css
+++ b/css/login-style.css
@@ -8,13 +8,15 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background-color: var(--main-bg-color);
 }
 
 footer {
   margin-top: auto;
   width: 100%;
-  background: #D9D9D9;
+  background: #212529;
   padding: 1em;
+  color: #C8CDD0;
 }
 
 footer p {
@@ -44,7 +46,7 @@ main {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-color: #E3E3E3;
+  background-color: var(--secondary-bg-color);
   width: 100%;
   max-width: 30em;
   height: auto;
@@ -76,6 +78,8 @@ a {
   border-bottom-left-radius: 10px;
   border-top-right-radius: 10px;
   border-color: #ffb33a;
+  background-color: var(--main-bg-color);
+  color: var(--text-color);
 }
 
 button {
