--- a/css/my-profile.css
+++ b/css/my-profile.css
@@ -25,7 +25,7 @@ body {
     width: 90%;
     gap: 20%;
     max-width: 1200px;
-    height: calc(100vh - 108px);
+    min-height: fit-content;
     margin: 0 auto;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
