--- a/css/carrito.css
+++ b/css/carrito.css
@@ -68,7 +68,7 @@ justify-content: center;
 }
 
 @media (max-width: 768px){
-    .carrito-container {
+    .lado-productos {
         flex-direction: column;
     }
 
