--- a/css/carrito.css
+++ b/css/carrito.css
@@ -11,7 +11,7 @@ body {
 }
 
 .productos-lista {
-    flex: 2; 
+    flex: 2;
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
@@ -23,29 +23,29 @@ body {
     align-items: stretch;
     background-color: var(--secondary-bg-color);
     border: 1px solid var(--card-border);
-    border-radius: 5px; 
+    border-radius: 5px;
     overflow: hidden;
     margin-bottom: 1.5rem;
 }
 
 .producto-imagen {
-    width: 180px; 
+    width: 180px;
     object-fit: cover;
     height: 100%;
 }
 
 .carrito-info {
-padding: 1rem;
-display: flex;
-flex-direction: column;
-justify-content: center; 
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .lado-resumen {
-    flex: 1; 
+    flex: 1;
     background-color: var(--secondary-bg-color);
     border: 1px solid var(--card-border);
-    padding: 1.5rem; 
+    padding: 1.5rem;
     height: fit-content;
 }
 
@@ -65,14 +65,56 @@ justify-content: center;
     cursor: pointer;
     font-size: 1rem;
     margin-top: 1rem;
+    box-shadow: 0px 0px 10px #ffcb77;
 }
 
-@media (max-width: 768px){
+#pagar:hover {
+    background-color: #e49a23;
+}
+
+#vaciar-carrito {
+    box-shadow: 0px 0px 10px #FF4827;
+    background-color: #FF4827;
+    color: white;
+    border: none;
+    padding: 0.75rem 1.5rem;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1em;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin: 0 auto;
+}
+
+.lado-resumen,
+h3 {
+    text-align: center;
+}
+
+.companies {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1.5em;
+}
+
+.companies-img {
+    position: relative;
+    bottom: 1.3em;
+}
+
+@media (max-width: 768px) {
     .lado-productos {
         flex-direction: column;
     }
 
-    .lado-resumen { 
+    .lado-resumen {
         margin-top: 2rem;
     }
 
