--- a/css/carrito.css
+++ b/css/carrito.css
@@ -55,6 +55,11 @@ body {
     background-color: var(--main-bg-color);
 }
 
+#cantidad-cart{
+    width: 150px;
+    margin-top: 0.5rem;
+}
+
 #pagar {
     background-color: var(--main-color);
     color: white;
@@ -133,4 +138,8 @@ h3 {
     .producto-imagen{
         width: 10rem;
     }
+
+    #cantidad-cart{
+    width: 100px;
+}
 }
