--- a/css/carrito.css
+++ b/css/carrito.css
@@ -1,6 +1,10 @@
 body {
+    min-height: 100vh;
     color: var(--text-color);
     background-color: var(--main-bg-color);
+    display: flex; 
+    flex-direction: column; 
+    justify-content: space-between; 
 }
 
 .lado-productos {
